Changer mon mot de passe

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,3 +30,4 @@ security:
         - { path: ^/login$, roles: PUBLIC_ACCESS }
         - { path: ^/register, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
