--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,9 +1,6 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
+# config/services.yaml
 parameters:
+    openrouter.api_key: '%env(OPENROUTER_API_KEY)%'
 
 services:
     # default configuration for services in *this* file
@@ -12,7 +9,6 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
         exclude:
@@ -20,5 +16,7 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # explicitly configure the service with its dependencies
+    App\Service\ExternalChatbotService:
+        arguments:
+            $apiKey: '%openrouter.api_key%'
